--- a/index.html
+++ b/index.html
@@ -16,20 +16,12 @@
     <div class="wrapper">
       <header>
         <h1>Arthurs Point</h1>
-        <p></p>
-
-
-        <p class="view"><a href="https://github.com/arthurspoint">View My GitHub Profile</a></p>
+        <p>Band / Hill / Friends</p>
 
       </header>
-      <section>
-        <h1>
-<a id="arthurs-point" class="anchor" href="#arthurs-point" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Arthurs Point</h1>
 
-<p>Band / Hill / Friends</p>
-      </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Under Construction</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
