--- a/dev-index.html
+++ b/dev-index.html
@@ -28,12 +28,14 @@
   <main>
 
     <section class="section-top">
-      <h1>Arthurs Point</h1>
+      <h1>Arthur's Point</h1>
 
       <div>
         <p>Alternative Folk Band</p>
-        <p>Based in Wookey Hole</p>
+        <p>Based in <a class="link" target="_blank" href="//www.google.co.uk/maps/place/Wookey+Hole,+Wells/@51.2256485,-2.6765876,16z/data=!3m1!4b1!4m5!3m4!1s0x487218a9e01cde9b:0x9f4fb19eed83796e!8m2!3d51.2263747!4d-2.6716843">Wookey Hole</a></p>
       </div>
+
+      <img src="img/group.jpg">
 
     </section>
 
