Tweaked how gallery is displayed

--- a/gallery.html
+++ b/gallery.html
@@ -14,8 +14,8 @@ photos:
 	{% for item in page.photos %}
 		<li>
 			<div class="square-image">
-				<a href="{{ site.url }}/images/{{ item }}">
-					<img src="{{ site.url }}/images/{{ item }}"/>
+				<a href="images/{{ item }}">
+					<img src="images/{{ item }}"/>
 				</a>
 			</div>
 		</li>
