Fixed music URLS

--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@ songs:
     <li>
       <p>{{ item.name }}</p>
       <audio controls>
-        <source src="{{ site.url }}/music/{{ item.url }}" type="audio/mpeg">
+        <source src="/music/{{ item.url }}" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
     </li>
