Added changes from 09/03/17

--- a/tracks.html
+++ b/tracks.html
@@ -1,7 +1,7 @@
 ---
-title: Music
-heading: Music
-description:
+title: Tracks
+heading: Tracks
+description: Some recent tracks we have been working on.
 songs:
 -
   url: jenny-jones.mp3
@@ -10,7 +10,7 @@ songs:
   name: Kerrs Jig
   url: kerrs-jig.mp3
 -
-  name: Pssenger
+  name: Passenger
   url: passenger.m4a
 -
   name: Take up your spade
