--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 ---
-title: About
-description: The band members
+title: The Band
+description:
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
-<ul class="staff">
+
+<div class="about_photo">
+  <img src="/images/a2.jpg" alt="The band" class="" />
+</div>
+
+<ul class="members">
 	{% for person in site.staff_members %}
 		<li>
-			<div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div>
+			<!-- <div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div> -->
 			<div class="name">
       <!-- <a target="_blank" href="https://twitter.com/{{ person.twitter }}"> -->
       {{ person.name }}
