--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@ description: Alternative Folk band from Wookey Hole
 	<div class="text-container">
 		<h1 class="editable">Arthurs Point</h1>
 		<p class="subtext editable">Alternative Folk band from Wookey Hole.</p>
-		<div class="cta button alt"><a href="/about/">Who are they</a></div>
+		<!-- <div class="cta button alt"><a href="/about/">Who are they</a></div> -->
 		<div>
-			<img src="images/group.jpg" alt="The band" class="screenshot editable" />
+			<a href="/about/">
+				<img src="images/group.jpg" alt="The band" class="screenshot editable" />
+			</a>
 		</div>
 	</div>
 </section>
