--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Alternative Folk band from Wookey Hole
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Arthurs Point</h1>
+		<!-- <h1 class="editable">Arthurs Point</h1> -->
 		<p class="subtext editable">Alternative Folk band from Wookey Hole.</p>
 		<!-- <div class="cta button alt"><a href="/about/">Who are they</a></div> -->
 		<div>
