--- a/about.html
+++ b/about.html
@@ -1,23 +1,44 @@
 ---
 title: The Band
 description:
+
+band_members:
+  - name: Martin
+    instrument: Fiddle and Guitar.
+  - name: Rosa
+    instrument: Fiddle and Ukulele.
+  - name: Adam
+    instrument: Guitar and Mandolin.
+  - name: Louise
+    instrument: Flute and Vocals.
+  - name: Polly
+    instrument: Fiddle and Percussion.
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 
-<div class="about_photo">
+<!-- <div class="about_photo">
   <img src="/images/a2.jpg" alt="The band" class="" />
 </div>
-
+ -->
 <ul class="members">
-	{% for person in site.staff_members %}
-		<li>
-			<!-- <div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div> -->
-			<div class="name">
+  {% for person in page.band_members %}
+    <li>
+      <!-- <div class="square-image"><img src="{% include relative-src.html src=person.image_path %}" alt="{{ person.name }}"/></div> -->
+      <div class="name">
       <!-- <a target="_blank" href="https://twitter.com/{{ person.twitter }}"> -->
       {{ person.name }}
       <!-- </a> -->
       </div>
-			<div class="position">{{ person.position }}</div>
-		</li>
-	{% endfor %}
+      <div class="position">{{ person.instrument }}</div>
+    </li>
+  {% endfor %}
 </ul>
+
+<section style="padding-top: 5px;">
+    <div class="container flex">
+      <div class="text editable">
+        <p>We are an alternative folk band from Wookey Hole in the shadow of the beautiful Mendip Hills, with one of the high points, being Arthur's Point. With influences ranging from traditional jigs to rock, we play gigs in local venues and have covered parties, weddings and local festivals.</p>
+      </div>
+
+    </div>
+  </section>
