--- a/tracks.html
+++ b/tracks.html
@@ -15,6 +15,14 @@ songs:
 -
   name: Take up your spade
   url: take-up-your-spade.m4a
+
+-
+  name: Head over heels
+  url: head-over-heels.m4a
+
+-
+  name: Passenger 1
+  url: passenger-1.m4a
 ---
 <ul class="staff">
   {% for item in page.songs %}
