Tweaked about descr, changed gigs to contact

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ band_members:
 <section style="padding-top: 5px;">
     <div class="container flex">
       <div class="text editable">
-        <p>We are an alternative folk band from Wookey Hole in the shadow of the beautiful Mendip Hills, with one of the high points, being Arthur's Point. With influences ranging from traditional jigs to rock, we play gigs in local venues and have covered parties, weddings and local festivals.</p>
+        <p>We are an alternative folk band from Wookey Hole in Somerset formed in 2015. Based in the shadow of the beautiful Mendip Hills, Arthurs Point is one of the high points in the area from which we take our name. <br>With influences from both the classical and folk world we play a contrast of music ranging from traditional jigs to rock. We play gigs in local venues and have covered parties, weddings and local festivals.</p>
       </div>
 
     </div>
