Added martin on vocals and ben on bass

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ description:
 
 band_members:
   - name: Martin
-    instrument: Fiddle and Guitar.
+    instrument: Fiddle/Vocals and Guitar.
   - name: Rosa
     instrument: Fiddle and Ukulele.
   - name: Adam
@@ -13,6 +13,8 @@ band_members:
     instrument: Flute and Vocals.
   - name: Polly
     instrument: Fiddle and Percussion.
+  - name: Ben
+    instrument: Bass
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 
