--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@ description: Alternative Folk band from Wookey Hole
 		</div>
 	</div>
 </section>
+<div class="content">
+	
+
+	
+
+	
+
+	
+
+	<section class="bottom-cta">
+		<h2 class="editable"><strong>Up and coming gig</strong></h2>
+<p style="color:white">Sat 6th Jan 2018
+</p><p style="color:white">Venue: Wookey Hole Club
+</p>
+
+		
+	</section>
+</div>
+
 <!--
 <div class="content">
 	<section>
