Added biddy of sligo and linked it from front page

--- a/tracks.html
+++ b/tracks.html
@@ -13,6 +13,8 @@ songs:
   url: take-up-your-spade.m4a
 - name: Head over heels
   url: head-over-heels.m4a
+- name: Lannigans Ball and Biddy of Sligo
+  url: lannigans-ball-and-biddy-of-sligo.mp3
 ---
 
 <ul class="staff">
