--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@ description: Alternative Folk band from Wookey Hole
 	</div>
 </section>
 <div class="content">
-	
 
-	
 
-	
 
-	
+
+
+
+
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Up and coming gig</strong></h2>
+		<h2 class="editable"><strong>Most recent gig</strong></h2>
 <p style="color:white">Sat 6th Jan 2018
 </p><p style="color:white">Venue: Wookey Hole Club
 </p>
+<p style="color:white;"><a href="/tracks">List to it now</a></p>
 
-		
+
 	</section>
 </div>
 
