--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Alternative Folk band from Wookey Hole
 <p style="color:white">Sat 6th Jan 2018
 </p><p style="color:white">Venue: Wookey Hole Club
 </p>
-<p style="color:white;"><a href="/tracks">List to it now</a></p>
+<p style="color:white;"><a href="/tracks">Listen to the highlights here.</a></p>
 
 
 	</section>
