Add the word "vocals" to Rosa in the about section.

--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@ title: The Band
 description: 
 band_members:
 - name: Martin
-  instrument: Fiddle/Vocals and Guitar.
+  instrument: Fiddle, Vocals and Guitar.
 - name: Rosa
-  instrument: Fiddle and Ukulele.
+  instrument: Fiddle, Vocals and Ukulele.
 - name: Adam
   instrument: Guitar and Mandolin.
 - name: Louise
