--- a/tracks.html
+++ b/tracks.html
@@ -1,7 +1,7 @@
 ---
 title: Tracks
 heading: Tracks
-description: Some recent tracks we have been working on.
+description: Here's some brand new mixes of the songs and tunes we recorded live in Wookey Hole Church in January.
 songs:
 - url: jenny-jones.mp3
   name: Jenny Jones
