--- a/tracks.html
+++ b/tracks.html
@@ -3,6 +3,20 @@ title: Tracks
 heading: Tracks
 description: Here's some brand new mixes of the songs and tunes we recorded live in Wookey Hole Church in January.
 songs:
+- url: HUMMINGBIRD.mp3
+  name: Jamie Smith's I thought I saw a Hummingbird
+- url: LANNIGANS_BALL_AND_BIDDY_OF_SLIGO.mp3
+  name: The traditional Lannigan's Ball and Biddy of Sligo
+- url: LET_IT_GO.mp3
+  name: James Bay's Let it Go
+- url: LIKE_THE_DAWN.mp3
+  name: Oh Hello's Like the Dawn
+- url: PASSENGER.mp3
+  name: Lisa Hannigan's Passenger
+- url: SEA_OF_CLOUDS.mp3
+  name: Treacherous Orchestra's Sea of Clouds
+
+old_songs:
 - url: jenny-jones.mp3
   name: Jenny Jones
 - name: Kerrs Jig
