Added another gig

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@ description: Alternative Folk band from Wookey Hole
 
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Most recent gig</strong></h2>
-<p style="color:white">Sat 6th Jan 2018
-</p><p style="color:white">Venue: Wookey Hole Club
-</p>
-<p style="color:white;"><a href="/tracks">Listen to our latest recordings.</a></p>
+		<h2 class="editable"><strong>Upcoming gig</strong></h2>
 
-
+		<p style="color:white">Sat 14th April 2018</p>
+		<p style="color:white">Venue: Stawell Village Hall</p>
+		<p style="color:white;"><a href="/tracks">Listen to our latest recordings.</a></p>
+		
+		<h2>Previous gigs</h2>
+		<p style="color:white">Sat 6th Jan 2018</p>
+		<p style="color:white">Venue: Wookey Hole Club</p>
+		<p style="color:white;"><a href="/tracks">Recordings.</a></p>
 	</section>
 </div>
 
