--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@ description: Alternative Folk band from Wookey Hole
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Upcoming gig</strong></h2>
-
+		<p style="color:white;"><a href="/gig-poster.pdf">View the Gig Poster.</a></p>
 		<p style="color:white">Sat 14th April 2018</p>
 		<p style="color:white">Venue: Stawell Village Hall</p>
-		<p style="color:white;"><a href="/tracks">Listen to our latest recordings.</a></p>
+		
 		
 		<h2>Previous gigs</h2>
 		<p style="color:white">Sat 6th Jan 2018</p>
 		<p style="color:white">Venue: Wookey Hole Club</p>
-		<p style="color:white;"><a href="/tracks">Recordings.</a></p>
+		<p style="color:white;"><a href="/tracks">Listen to our latest recordings.</a></p>
 	</section>
 </div>
 
