--- a/tracks.html
+++ b/tracks.html
@@ -17,6 +17,10 @@ songs:
   name: Treacherous Orchestra's Sea of Clouds
 
 old_songs:
+- name: Lannigans Ball and Biddy of Sligo
+  url: lannigans-ball-and-biddy-of-sligo.mp3
+
+really_old_songs:
 - url: jenny-jones.mp3
   name: Jenny Jones
 - name: Kerrs Jig
@@ -27,8 +31,6 @@ old_songs:
   url: take-up-your-spade.m4a
 - name: Head over heels
   url: head-over-heels.m4a
-- name: Lannigans Ball and Biddy of Sligo
-  url: lannigans-ball-and-biddy-of-sligo.mp3
 ---
 
 <ul class="staff">
