--- a/tracks.html
+++ b/tracks.html
@@ -17,7 +17,7 @@ songs:
   name: Treacherous Orchestra's Sea of Clouds
 
 old_songs:
-- name: Lannigans Ball and Biddy of Sligo
+- name: Live at Wookey Hole
   url: lannigans-ball-and-biddy-of-sligo.mp3
 
 really_old_songs:
