--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ description: Alternative Folk band from Wookey Hole
 			<a href="/about/">
 				<img src="images/group.jpg" alt="The band" class="screenshot editable" />
 			</a>
+			<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Farthurspointband&amp;tabs&amp;width=340&amp;height=130&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=false&amp;appId=319599908473430" width="340" height="130" style="border:none;overflow:hidden;padding-top: 50px;" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 		</div>
 	</div>
 </section>
